[APPBUG-5260] UI alignment issue for SO 3.0 users
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@71649 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/locationbar_fdx.css
+++ b/projects/Media/docroot/assets/css/common/locationbar_fdx.css
@@ -292,7 +292,7 @@
 
 	.globalnav_top .nav .searchform {
 		margin-top: 0;
-		width: 287px;
+		width: 280px;
 	}
 	/* no create account/standing order button */
 	.globalnav_top .nav .searchform.widen {
